--- a/Jisshu/template/req.html
+++ b/Jisshu/template/req.html
@@ -1,5 +1,5 @@
 
-<!Code Developer By JISSHU_BOTS >
+<!Code Developer By Mr.Official >
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -76,7 +76,7 @@
                                 This is a Telegram Bot to Stream <span>Movies</span> and <span>Series</span> directly on
                                 Telegram. You can also
                                 <span>download</span> them if you want. This bot is developed by <a
-                                    href="https://telegram.dog/IM_JISSHU"><span style="font-weight: 700;">ZISHAN</span></a>
+                                    href="https://telegram.dog/Mr_Official_300"><span style="font-weight: 700;">BABAY</span></a>
                                 <br><br>If you like this bot, then don't
                                 forget to share it with your friends and family.
                             </p>
@@ -85,17 +85,17 @@
                         <div class="abt-sec" id="channels">
                             <h1>JOIN OUR <span>TELEGRAM</span> CHANNELS</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/JISSHU_BOTS">
-                                    <button>BOTS CHANNEL</button>
+                                <a class="magnet" href="https://t.me/CpFlicks">
+                                    <button>UPDATE CHANNEL</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/Jisshu_support">
+                                <a class="magnet" href="https://t.me/CpFlicks_Support">
                                     <button>SUPPORT GROUP</button>
                                 </a>
-                                <a class="magnet" href="https://t.me/Jisshu_Originals">
+                                <a class="magnet" href="https://t.me/CpFlicks">
                                     <button>MOVIES CHANNEL</button
                                 </a>
-                                <!---<a class="magnet" href="https://t.me/EpitomeQuality">
-                                    <button>EPITOME QUALITY</button>
+                                <!---<a class="magnet" href="https://t.me/CpFlicks">
+                                    <button>The CpFlicks</button>
                                 </a>-->
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                         <div class="abt-sec" id="contact">
                             <p style="text-align: center;">Report Bugs and Contact us on Telegram Below</p>
                             <div class="links contact">
-                                <a href="https://t.me/JisshuDeveloperBot">
+                                <a href="https://t.me/Mr_Official_300">
                                     <button>CONTACT</button>
                                 </a>
                             </div>
@@ -116,8 +116,8 @@
         <footer>
             <center>
                 <div class="copyright">
-                    <h5 class="text-center">Copyright © 2024 <a href="https://telegram.dog/IM_JISSHU"><span
-                                style="font-weight: 700;">JISSHU DEVELOPER</span></a>. All
+                    <h5 class="text-center">Copyright © 2025 <a href="https://telegram.dog/Mr_Official_300"><span
+                                style="font-weight: 700;">Mr.Official</span></a>. All
                         Rights Reserved.</h5>
                 </div>
             </center>
